@@ -1,4 +1,4 @@
-/* $Id: dumpmine.c,v 1.7 2004-12-20 09:34:07 btb Exp $ */
+/* $Id: dumpmine.c,v 1.8 2004-12-21 11:14:47 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -25,7 +25,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-static char rcsid[] = "$Id: dumpmine.c,v 1.7 2004-12-20 09:34:07 btb Exp $";
+static char rcsid[] = "$Id: dumpmine.c,v 1.8 2004-12-21 11:14:47 btb Exp $";
 #endif
 
 #include <stdio.h>
@@ -66,6 +66,9 @@ static char rcsid[] = "$Id: dumpmine.c,v 1.7 2004-12-20 09:34:07 btb Exp $";
 
 extern ubyte bogus_data[64*64];
 extern grs_bitmap bogus_bitmap;
+
+void dump_used_textures_level(FILE *my_file, int level_num);
+void say_totals(FILE *my_file, char *level_name);
 
 // ----------------------------------------------------------------------------
 char	*object_types(int objnum)
